<resources>
    <string name="app_name">HelloKT</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">sign up</string>
    <string name="or">Or</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
</resources>
