<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSignUp" android:textSize="50sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="110dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="110dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etSignUpUsername"
            android:inputType="textPersonName" android:hint="@string/username" android:textSize="16sp"
            android:layout_marginTop="35dp" app:layout_constraintTop_toBottomOf="@+id/textSignUp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp" android:importantForAutofill="no"/>
    <EditText
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etSignUpEmail"
            android:inputType="textEmailAddress" android:hint="@string/email" android:textSize="16sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etSignUpUsername"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp" android:importantForAutofill="no"/>
    <EditText
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etSignUpPassword"
            android:inputType="textPassword" android:hint="@string/password" android:textSize="16sp"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/etSignUpEmail"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            android:importantForAutofill="no"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/btnConfirmPassword"
            android:hint="@string/confirm_password" android:textSize="16sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="42dp" android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/etSignUpPassword" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="42dp" android:importantForAutofill="no"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp" android:layout_marginTop="29dp"
            app:layout_constraintTop_toBottomOf="@+id/btnConfirmPassword" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="38dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="39dp"/>
</android.support.constraint.ConstraintLayout>