<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:background="@color/colorLightBlue">

    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textTitle" android:textSize="50sp"
            android:textColor="@android:color/holo_purple" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="162dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="148dp" android:typeface="monospace" android:textAllCaps="true"
            android:shadowColor="@color/secondary_text" android:textStyle="bold" android:layout_marginTop="80dp"/>
    <EditText
            android:layout_height="38dp"
            android:ems="10"
            android:id="@+id/etEmail"
            android:hint="@string/email" android:inputType="textEmailAddress" android:textSize="16sp"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/textTitle"
            android:importantForAutofill="no" android:singleLine="true"
            android:layout_width="325dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
    />
    <EditText
            android:layout_width="325dp"
            android:layout_height="38dp"
            android:ems="10"
            android:id="@+id/etPassword"
            android:hint="@string/password" android:inputType="textPassword" android:textSize="16sp"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
            android:importantForAutofill="no" android:singleLine="true"
    />
    <Button
            android:text="@string/login"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="68dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="66dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/textErrorAlert"
            app:layout_constraintHorizontal_bias="0.506" android:layout_marginTop="5dp"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="110dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="116dp"
            android:id="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
    >

        <TextView
                android:text="@string/don_t_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtOptionalText1"
                android:textSize="12sp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="2dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="3dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textGoToSignUpPage"
                app:layout_constraintStart_toEndOf="@+id/txtOptionalText1"
                android:layout_marginStart="5dp" android:textSize="13sp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="2dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/colorBlue"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textErrorAlert" android:textSize="12sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="176dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="176dp"/>
</android.support.constraint.ConstraintLayout>